@@ -3,10 +3,6 @@
 #
 # Initial script by Nicolas Roduit
 
-# Specify the required Java version.
-# Only major version is checked. Minor version or any other version string info is left out.
-REQUIRED_TEXT_VERSION=18
-
 # Build Parameters
 REVISON_INC="1"
 PACKAGE=YES
@@ -15,7 +11,7 @@ PACKAGE=YES
 # jdk.unsupported => sun.misc.Signal
 # jdk.localedata => other locale (en_us) data are included in the jdk.localedata
 # jdk.jdwp.agent => package for debugging agent
-JDK_MODULES="java.base,java.compiler,java.datatransfer,java.net.http,java.desktop,java.logging,java.management,java.prefs,java.xml,jdk.localedata,jdk.charsets,jdk.crypto.ec,jdk.crypto.cryptoki,jdk.unsupported,jdk.jdwp.agent"
+JDK_MODULES="java.base,java.compiler,java.datatransfer,java.net.http,java.desktop,java.logging,java.management,java.prefs,java.xml,jdk.localedata,jdk.charsets,jdk.crypto.ec,jdk.crypto.cryptoki,jdk.unsupported,jdk.jdwp.agent,java.sql"
 NAME="Weasis"
 IDENTIFIER="org.weasis.launcher"
 
@@ -36,7 +32,7 @@ do
 echo "Usage: package-weasis.sh <options>"
 echo "Sample usages:"
 echo "    Build an installer for the current platform with the minimal required parameters"
-echo "        package-weasis.sh --input /home/user/weasis-native --jdk /home/user/jdk-16"
+echo "        package-weasis.sh --jdk /home/user/jdk-20"
 echo ""
 echo "Options:"
 echo " --help -h
@@ -48,9 +44,11 @@ echo " --output -o
 Path of the base output directory.
 Default value is the current directory"
 echo " --jdk -j
-Path of the jdk with the jpackage module (>= jdk-16+12)"
+Path of the jdk with the jpackage module"
 echo " --temp
 Path of the temporary directory during build"
+echo " --no-installer
+Build only the native binaries not the final installer"
 echo " --mac-signing-key-user-name
 Key user name of the certificate to sign the bundle"
 exit 0
@@ -75,6 +73,10 @@ TEMP_PATH="$2"
 shift # past argument
 shift # past value
 ;;
+--no-installer)
+PACKAGE="NO"
+shift # past argument
+;;
 --mac-signing-key-user-name)
 CERTIFICATE="$2"
 shift # past argument
@@ -93,8 +95,17 @@ curPath=$(dirname "$(readlink -f "$0")")
 rootdir="$(dirname "$curPath")"
 rootdir="$(dirname "$rootdir")"
 
-if [ -z "$INPUT_PATH" ] ; then
-  INPUT_PATH="${rootdir}/weasis-distributions/target/native-dist/weasis-native"
+echo "rootdir: $rootdir"
+
+if [ ! -d "${INPUT_PATH}" ] ; then
+  INPUT_PATH="${rootdir}/bin-dist"
+  if [ ! -d "${INPUT_PATH}" ] ; then
+    INPUT_PATH="${rootdir}/weasis-distributions/target/native-dist/weasis-native/bin-dist"
+  fi
+fi
+
+if [ ! -d "${INPUT_PATH}" ] ; then
+  die "The input path ${INPUT_PATH} doesn't exist, provide a valid value for --input"
 fi
 
 cp "$INPUT_PATH/weasis/bundle/weasis-core-img-"* weasis-core-img.jar.xz
@@ -110,7 +121,7 @@ arc=$(echo "${ARC_OS}" | cut -d'-' -f2-3)
 if [ "$machine" = "windows" ] ; then
   INPUT_PATH_UNIX=$(cygpath -u "$INPUT_PATH")
   OUTPUT_PATH_UNIX=$(cygpath -u "$OUTPUT_PATH")
-  RES="${curPath}\resources\$machine"
+  RES="${curPath}\resources\\${machine}"
 else
   INPUT_PATH_UNIX="$INPUT_PATH"
   OUTPUT_PATH_UNIX="$OUTPUT_PATH"
@@ -120,7 +131,7 @@ fi
 # Set custom JDK path (>= JDK 11)
 export JAVA_HOME=$JDK_PATH_UNIX
 
-WEASIS_VERSION=$(grep -i "weasis.version=" "$INPUT_PATH_UNIX/weasis/conf/config.properties" | sed 's/^.*=//')
+WEASIS_VERSION=$(grep -i "weasis.version=" "${curPath}/build.properties" | sed 's/^.*=//')
 
 echo System        = "${ARC_OS}"
 echo JDK path        = "${JDK_PATH_UNIX}"
@@ -131,6 +142,9 @@ then
   echo Input unix path      = "${INPUT_PATH_UNIX}"
 fi
 
+# Specify the required Java version.
+# Only major version is checked. Minor version or any other version string info is left out.
+REQUIRED_TEXT_VERSION=$(grep -i "jdk.version=" "${curPath}/build.properties" | sed 's/^.*=//')
 # Extract major version number for comparisons from the required version string.
 # In order to do that, remove leading "1." if exists, and minor and security versions.
 REQUIRED_MAJOR_VERSION=$(echo $REQUIRED_TEXT_VERSION | sed -e 's/^1\.//' -e 's/\..*//')
@@ -162,8 +176,8 @@ fi
 
 
 if [ "$machine" = "windows" ] ; then
-  INPUT_DIR="$INPUT_PATH\\weasis"
-  IMAGE_PATH="$OUTPUT_PATH\\$NAME"
+  INPUT_DIR="$INPUT_PATH\weasis"
+  IMAGE_PATH="$OUTPUT_PATH\\${NAME}"
 else
   IMAGE_PATH="$OUTPUT_PATH/$NAME"
   INPUT_DIR="$INPUT_PATH_UNIX/weasis"
@@ -177,6 +191,7 @@ rm -f "$INPUT_DIR"/*.jar.pack.gz
 
 # Remove the unrelated native packages
 find "$INPUT_DIR"/bundle/weasis-opencv-core-* -type f ! -name '*-'"${ARC_OS}"'-*'  -exec rm -f {} \;
+find "$INPUT_DIR"/bundle/jogamp-* -type f ! -name '*-'"${ARC_OS}"'-*' ! -name 'jogamp-[0-9]*' -exec rm -f {} \;
 
 # Special case with 32-bit x86 architecture, remove 64-bit lib
 if [ "$arc" = "x86" ] ; then
@@ -216,6 +231,8 @@ else
   declare -a signArgs=()
 fi
 declare -a commonOptions=("--java-options" "-Dgosh.port=17179" \
+"--java-options" "-Djavax.accessibility.assistive_technologies=org.weasis.launcher.EmptyAccessibilityProvider" \
+"--java-options" "-Djavax.accessibility.screen_magnifier_present=false" "--java-options" "--enable-preview" \
 "--java-options" "--add-exports=java.base/sun.net.www.protocol.http=ALL-UNNAMED" "--java-options" "--add-exports=java.base/sun.net.www.protocol.file=ALL-UNNAMED" \
 "--java-options" "--add-exports=java.base/sun.net.www.protocol.https=ALL-UNNAMED" "--java-options" "--add-exports=java.base/sun.net.www.protocol.ftp=ALL-UNNAMED" \
 "--java-options" "--add-exports=java.base/sun.net.www.protocol.jar=ALL-UNNAMED" "--java-options" "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED" \
@@ -231,22 +248,24 @@ $JPKGCMD --type app-image --input "$INPUT_DIR" --dest "$OUTPUT_PATH" --name "$NA
 
 if [ "$PACKAGE" = "YES" ] ; then
   VENDOR="Weasis Team"
-  COPYRIGHT="© 2009-2022 Weasis Team"
+  COPYRIGHT="© 2009-2023 Weasis Team"
   if [ "$machine" = "windows" ] ; then
-    [ "$ARC_NAME" = "x86" ]  && UPGRADE_UID="3aedc24e-48a8-4623-ab39-0c3c01c7383b" || UPGRADE_UID="3aedc24e-48a8-4623-ab39-0c3c01c7383a"
-    $JPKGCMD --type "msi" --app-image "$IMAGE_PATH" --dest "$OUTPUT_PATH" --name "$NAME" --resource-dir "$RES/msi/$ARC_NAME" \
+    [ "$arc" = "x86" ]  && UPGRADE_UID="3aedc24e-48a8-4623-ab39-0c3c01c7383b" || UPGRADE_UID="3aedc24e-48a8-4623-ab39-0c3c01c7383a"
+    $JPKGCMD --type "msi" --app-image "$IMAGE_PATH" --dest "$OUTPUT_PATH" --name "$NAME" --resource-dir "$RES/msi/${arc}" \
     --license-file "$INPUT_PATH\Licence.txt" --description "Weasis DICOM viewer" --win-upgrade-uuid "$UPGRADE_UID"  \
     --win-menu --win-menu-group "$NAME" --copyright "$COPYRIGHT" --app-version "$WEASIS_CLEAN_VERSION" \
     --vendor "$VENDOR" --file-associations "${curPath}\file-associations.properties" "${tmpArgs[@]}" --verbose
-    mv "$OUTPUT_PATH_UNIX/$NAME-$WEASIS_CLEAN_VERSION.msi" "$OUTPUT_PATH_UNIX/$NAME-$WEASIS_CLEAN_VERSION-$ARC_NAME.msi"
+    mv "$OUTPUT_PATH_UNIX/$NAME-$WEASIS_CLEAN_VERSION.msi" "$OUTPUT_PATH_UNIX/$NAME-$WEASIS_CLEAN_VERSION-${arc}.msi"
   elif [ "$machine" = "linux" ] ; then
     declare -a installerTypes=("deb" "rpm")
     for installerType in "${installerTypes[@]}"; do
+      [ "${installerType}" = "rpm" ] && DEPENDENCIES="" || DEPENDENCIES="libstdc++6, libgcc1"
       $JPKGCMD --type "$installerType" --app-image "$IMAGE_PATH" --dest "$OUTPUT_PATH"  --name "$NAME" --resource-dir "$RES" \
       --license-file "$INPUT_PATH/Licence.txt" --description "Weasis DICOM viewer" --vendor "$VENDOR" \
       --copyright "$COPYRIGHT" --app-version "$WEASIS_CLEAN_VERSION" --file-associations "${curPath}/file-associations.properties" \
       --linux-app-release "$REVISON_INC" --linux-package-name "weasis" --linux-deb-maintainer "Nicolas Roduit" --linux-rpm-license-type "EPL-2.0" \
-      --linux-menu-group "Viewer;MedicalSoftware;Graphics;" --linux-app-category "science" --linux-shortcut "${tmpArgs[@]}" --verbose
+      --linux-menu-group "Viewer;MedicalSoftware;Graphics;" --linux-app-category "science" --linux-package-deps "${DEPENDENCIES}" \
+      --linux-shortcut "${tmpArgs[@]}" --verbose
       if [ -d "${TEMP_PATH}" ] ; then
         rm -rf "${TEMP_PATH}"
       fi
